fix logo overlap links in mobile view styles.css

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -154,6 +154,10 @@ header nav a{
 		flex-direction: column;
 	}
 
+	header .logo-svg{
+		margin-bottom: -20px;
+	}
+
 	header h2{
 		margin-bottom: 15px;
 	}
@@ -197,7 +201,7 @@ header nav a{
 .main-view .normal{
 	font: normal 40px 'Open Sans', sans-serif;
 	margin-bottom: 10px;
-	margin-top: 40px;
+	margin-top: 75px;
 	color: #414a4f;
 }
 
@@ -412,7 +416,7 @@ header nav a{
 	height: auto;
 	border-radius: 25px;
 	border: #414a4f 3px solid;
-	margin-top: 60px;
+	margin-top: 100px;
 }
 .single-product .text{
 	flex-direction: column;
@@ -526,7 +530,7 @@ header nav a{
 .about h4{
 	font: bold 40px 'Open Sans', sans-serif;
 	margin-bottom: 10px;
-	margin-top: 35px;
+	margin-top: 110px;
 	color: #414a4f;
 }
 
@@ -581,7 +585,7 @@ header nav a{
 .contact h4{
 	font: bold 40px 'Open Sans', sans-serif;
 	margin-bottom: 10px;
-	margin-top: 35px;
+	margin-top: 80px;
 	color: #414a4f;
 }
 
@@ -616,13 +620,13 @@ footer{
 	text-align: center;
 	color: #fff;
 	background-color: darkolivegreen;
-	padding: 20px 0;
+	padding: 14px 0;
 }
 
 footer ul{
 	display: flex;
-	margin-bottom: 25px;
-	font-size: 32px;
+	margin-bottom: 17px;
+	font-size: 26px;
 }
 
 footer ul li{
@@ -639,19 +643,27 @@ footer ul li:last-child{
 
 footer p{
 	text-transform: uppercase;
-	font-size: 16px;
+	font-size: 14px;
 	color: rgba(255,255,255,0.6);
-	margin-bottom: 10px;
+	margin-bottom: 6px;
 }
 
 footer p a{
 	color: #fff;
 }
 
+footer .fa-facebook{
+	color: #5b91cb;
+}
+
+footer .fa-envelope{
+	color: #d97e6a;
+}
+
 @media (max-width: 700px){
 
 	footer{
-		padding: 80px 15px;
+		padding: 10px 15px;
 	}
 
 }
